[package]
name = "uqoin-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
uqoin-core = "0.1.0"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
serde_json = "1.0.140"
aes = "0.8.4"

# js-sys = "0.3.77"
# wasm-bindgen-futures = "0.4.50"
# serde = { version = "1.0.219", features = ["derive"] }
# serde_derive = "1.0.219"

# [dependencies.web-sys]
# version = "0.3.77"
# features = [
#   'Headers',
#   'Request',
#   'RequestInit',
#   'RequestMode',
#   'Response',
#   'Window',
#   'Storage',
#   'console',
# ]

# Not working...
# [target.wasm32-unknown-unknown]
# rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
